--- a/Pulumi.dev.yaml
+++ b/Pulumi.dev.yaml
@@ -4,5 +4,7 @@ config:
     server: 192.168.3.91
     path: /vsanfs/kube-dev
   kubernetes:loadbalancer:
-
+    network:
+      start: 192.168.2.100
+      end: 192.168.2.120
   pulumi:template: kubernetes-python
